[workspace]
members = ["crates/four", "crates/four_derive", "examples/simple_lambda"]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "README.md"
repository = "https://github.com/335g/four"

[workspace.dependencies]
regex = "1.10"
serde = "1"
serde_json = "1"
thiserror = "1"
erased-serde = "0.4"
convert_case = "0.6"
