[workspace]
members = [
    "crates/four",
    "crates/four_derive",
    "crates/four_iam",
    "crates/four_lambda",
]
resolver = "2"

[patch.crates-io]
four = { path = "crates/four" }
four_derive = { path = "crates/four_derive" }

[workspace.dependencies]
convert_case = "0.6"
dyn-clone = "1.0.17"
erased-serde = "0.4"
four = "0.0.3"
four_derive = "0.0.3"
four_iam = "0.0.3"
regex = "1.10"
serde = "1"
serde_json = "1"
thiserror = "1"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.67"


[workspace.dev-dependencies]
