[workspace]
members = ["four", "four_cli", "four_derive", "examples/simple_lambda"]
resolver = "2"

[patch.crates-io]
four = { path = "four" }

[workspace.dependencies]
convert_case = "0.6"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.91"
anyhow = "1.0.95"
clap = "4.5.21"
derive-new = "0.7.0"
dotenvy = "0.15.7"
dyn-clone = "1.0.17"
erased-serde = "0.4"
four = "0.0.13"
nutype = "0.5.1"
regex = "1.11"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1.41.1"
url = "2.5"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
async-trait = "0.1.83"
