[package]
name = "four"
version = "0.0.8"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../README.md"
repository = "https://github.com/335g/four"

[features]
iam = []
lambda = ["iam"]
full = ["iam", "lambda"]

[dependencies]
dyn-clone = "1.0.17"
four_derive = { version = "0.0", path = "../four_derive" }
erased-serde = "0.4"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
