[package]
name = "four"
version = "0.0.13"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../README.md"
repository = "https://github.com/335g/four"

[features]
iam = ["url"]
lambda = ["iam"]
full = ["iam", "lambda"]
url = ["dep:url"]

[dependencies]
dyn-clone = "1.0.17"
four_derive = { version = "0.0", path = "../four_derive" }
erased-serde = "0.4"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
url = { version = "2.5", optional = true, features = ["serde"] }
nutype = { version = "0.5.0", features = ["regex", "serde"] }
derive-new = "0.7.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
