[package]
name = "four"
version = "0.0.13"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../README.md"
repository = "https://github.com/335g/four"

[features]
iam = ["url"]
lambda = ["iam"]
full = ["iam", "lambda"]
url = ["dep:url"]

[dependencies]
dyn-clone = { workspace = true }
four_derive = { version = "0.0", path = "../four_derive" }
erased-serde = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"], optional = true }
nutype = { workspace = true, features = ["regex", "serde"] }
derive-new = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
