[package]
name = "cargo-four"
version = "0.0.12"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../README.md"
repository = "https://github.com/335g/four"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
