[package]
name = "cargo-four"
version = "0.0.13"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../README.md"
repository = "https://github.com/335g/four"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true, default-features = false }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
