[package]
name = "four-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { workspace = true, features = ["sso"] }
aws-sdk-cloudformation = { workspace = true }
erased-serde = { workspace = true }
lazy_static.workspace = true
nutype = { workspace = true, features = ["regex", "serde"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
