[package]
name = "four-iam"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aws-sdk-iam = { workspace = true }
erased-serde.workspace = true
four-core.workspace = true
lazy_static.workspace = true
nutype = { workspace = true, features = ["regex", "serde"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
