[package]
name = "four-lambda"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aws-sdk-lambda.workspace = true
four.workspace = true
four-iam.workspace = true
four-s3.workspace = true
lazy_static.workspace = true
nutype = { workspace = true, features = ["regex", "serde"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
