[package]
name = "four-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
proc-macro2 = { version = "1.0.86", features = ["proc-macro"] }
quote = { version = "1.0.36", features = ["proc-macro"] }
syn = { version = "2.0.67", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.96"
