[package]
name = "four"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true

[features]
derive = ["four_derive"]

[dependencies]
erased-serde = { workspace = true }
four_derive = { version = "0.0.1", optional = true }
regex.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
