[package]
name = "four"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true

[features]
derive = ["four_derive"]

[dependencies]
four_derive = { version = "0.0.3", optional = true }
erased-serde = { workspace = true }
regex.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
