[package]
name = "four"
version = "0.0.3"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../../README.md"
repository = "https://github.com/335g/four"

[features]
derive = ["four_derive"]

[dependencies]
four_derive = { workspace = true, optional = true }
erased-serde = { workspace = true }
regex.workspace = true
serde = { workspace = true }
thiserror.workspace = true
dyn-clone.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
