[package]
name = "four_derive"
version = "0.0.4"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "README.md"
repository = "https://github.com/335g/four"

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
