[package]
name = "four_lambda"
version = "0.0.6"
authors = ["Yoshiki Kudo"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"
categories = ["development-tools"]
description = "framework for creating AWS CloudFormation template"
keywords = ["four", "aws", "cloudformation", "iac"]
readme = "../../README.md"
repository = "https://github.com/335g/four"

[dependencies]
dyn-clone = { workspace = true }
erased-serde = { workspace = true }
four = { workspace = true, features = ["derive"] }
four_iam = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
